--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.24",
@@ -29,6 +29,6 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
