--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "theme-change": "^2.5.0"
