--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ anyio==4.2.0
 cffi==1.16.0
 click==8.1.7
 cryptography==41.0.7
+dnspython==2.4.2
 ecdsa==0.18.0
+email-validator==2.1.0.post1
 fastapi==0.108.0
 greenlet==3.0.3
 h11==0.14.0
@@ -19,6 +21,7 @@ pydantic-settings==2.1.0
 pydantic_core==2.14.6
 python-dotenv==1.0.0
 python-jose==3.3.0
+python-multipart==0.0.6
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
