--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "react": "^18",
     "react-daisyui": "^5.0.0",
@@ -21,6 +21,8 @@
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "^18",
