Adiciona atalho para formatadores de código

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,3 +3,9 @@ run-dev:
 
 run:
 	@uvicorn main:app --host 0.0.0.0 --port 8000
+
+format:
+	@echo "Sorting imports with isort..."
+	@isort . --profile black --diff
+	@echo "Formatting with YAPF..."
+	@yapf . -i -r -p -m
