--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,5 +1,14 @@
 run-dev:
-	@uvicorn main:app --reload --host 0.0.0.0 --port 8000
+	@uvicorn app:app --reload --host 0.0.0.0 --port 8000
 
 run:
 	@uvicorn main:app --host 0.0.0.0 --port 8000
+
+migrate:
+	@alembic revision --autogenerate -m "$(msg)"
+
+upgrade:
+	@alembic upgrade head
+
+downgrade:
+	@alembic downgrade -1
