--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "theme-change": "^2.5.0"
@@ -30,7 +30,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.24",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "5.3.3"
