--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-input-mask": "^3.0.5",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
@@ -18,6 +19,7 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.5.3",
     "theme-change": "^2.5.0"
   },
