--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.25.0",
     "@types/react-input-mask": "^3.0.5",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -18,10 +20,12 @@
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.5.3",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
