--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,34 +1,36 @@
-alembic==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
-annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
-cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-cryptography==41.0.7 ; python_version >= "3.10" and python_version < "4.0"
-dnspython==2.4.2 ; python_version >= "3.10" and python_version < "4.0"
-ecdsa==0.18.0 ; python_version >= "3.10" and python_version < "4.0"
-email-validator==2.1.0.post1 ; python_version >= "3.10" and python_version < "4.0"
-exceptiongroup==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
-fastapi==0.108.0 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
-mako==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
-passlib==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
-pyasn1==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-core==2.14.6 ; python_version >= "3.10" and python_version < "4.0"
-pydantic-settings==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.5.3 ; python_version >= "3.10" and python_version < "4.0"
-pydantic[email]==2.5.3 ; python_version >= "3.10" and python_version < "4.0"
-python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
-python-jose==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
-python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
-rsa==4.9 ; python_version >= "3.10" and python_version < "4"
-six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.24 ; python_version >= "3.10" and python_version < "4.0"
-starlette==0.32.0.post1 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
-uvicorn==0.25.0 ; python_version >= "3.10" and python_version < "4.0"
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.2.0
+cffi==1.16.0
+click==8.1.7
+cryptography==41.0.7
+dnspython==2.4.2
+ecdsa==0.18.0
+email-validator==2.1.0.post1
+fastapi==0.108.0
+greenlet==3.0.3
+h11==0.14.0
+idna==3.6
+mako==1.3.0
+markupsafe==2.1.3
+numpy==1.26.4
+pandas==2.2.1
+passlib==1.7.4
+pyasn1==0.5.1
+pycparser==2.21
+pydantic==2.5.3
+pydantic-core==2.14.6
+pydantic-settings==2.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2024.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+sqlalchemy==2.0.24
+starlette==0.32.0.post1
+typing-extensions==4.9.0
+tzdata==2024.1
+uvicorn==0.25.0
