--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,9 @@ uvicorn = "0.25.0"
 python-multipart = "^0.0.7"
 pandas = "^2.2.0"
 xlsxwriter = "^3.1.9"
+httpx = "^0.27.0"
+pytest = "^8.1.1"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
