--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,6 +1,32 @@
-importlib-metadata==7.0.1 ; python_version >= "3.10" and python_version < "4.0"
+anyio==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
+asttokens==2.4.1 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
+exceptiongroup==1.2.1 ; python_version >= "3.10" and python_version < "3.11"
+executing==2.0.1 ; python_version >= "3.10" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.10" and python_version < "4.0"
+ipython==8.25.0 ; python_version >= "3.10" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
+jedi==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
+matplotlib-inline==0.1.7 ; python_version >= "3.10" and python_version < "4.0"
+parso==0.8.4 ; python_version >= "3.10" and python_version < "4.0"
+pexpect==4.9.0 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
+platformdirs==4.2.1 ; python_version >= "3.10" and python_version < "4.0"
+prompt-toolkit==3.0.47 ; python_version >= "3.10" and python_version < "4.0"
+ptyprocess==0.7.0 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform != "win32" and sys_platform != "emscripten")
+pure-eval==0.2.2 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+stack-data==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "4.0"
+traitlets==5.14.3 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "3.12"
+wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
 yapf==0.40.2 ; python_version >= "3.10" and python_version < "4.0"
-zipp==3.17.0 ; python_version >= "3.10" and python_version < "4.0"
+zipp==3.18.1 ; python_version >= "3.10" and python_version < "4.0"
