chore(lint): Aplicando `ruff format` no backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,14 +13,16 @@
       "source.organizeImports": "explicit"
     }
   },
-  "isort.args": ["--profile", "black"],
+  "isort.args": [
+    "--profile",
+    "black"
+  ],
   "isort.check": true,
   "editor.codeActionsOnSave": {
     "source.sortImports": "explicit"
   },
   "python.analysis.typeCheckingMode": "strict",
   "python.analysis.autoImportCompletions": true,
-
   // Prettier Configurations:
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.tabSize": 2,
@@ -28,7 +30,6 @@
   "prettier.tabWidth": 2,
   "prettier.printWidth": 90,
   "prettier.semi": false,
-  
   // Auto save:
   "editor.formatOnSave": true,
 }
