--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,11 @@ description = "A backend for the NES Website project"
 authors = ["felipeadeildo <felipe.adeildo@proton.me>"]
 readme = ""
 
+
+[tool.ruff]
+line-length = 79
+
+
 [tool.poetry.dependencies]
 python = "^3.10"
 alembic = "1.13.1"
@@ -45,9 +50,9 @@ requests = "^2.32.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
-yapf = "^0.40.2"
 ipython = "^8.25.0"
 httpx = "^0.27.0"
+ruff = "^0.4.9"
 
 [build-system]
 requires = ["poetry-core"]
