--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@types/react-input-mask": "^3.0.5",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "next": "^14.1.1",
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.5.3",
+    "tailwind-merge": "^2.3.0",
     "theme-change": "^2.5.0",
     "zod": "^3.22.4"
   },
