--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^9.5.3",
     "tailwind-merge": "^2.3.0",
     "theme-change": "^2.5.0",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
