--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.5.3",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.3.0",
     "theme-change": "^2.5.0",
     "usehooks-ts": "^3.1.0",
