--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -45,7 +45,7 @@ pandas = "^2.2.0"
 xlsxwriter = "^3.1.9"
 httpx = "^0.27.0"
 pytest = "^8.1.1"
-requests = "^2.32.2"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
