--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,6 @@ annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 anyio==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
 cryptography==42.0.4 ; python_version >= "3.10" and python_version < "4.0"
@@ -16,7 +15,7 @@ greenlet==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 httpcore==1.0.5 ; python_version >= "3.10" and python_version < "4.0"
 httpx==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 mako==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
@@ -25,6 +24,7 @@ packaging==24.0 ; python_version >= "3.10" and python_version < "4.0"
 pandas==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
 passlib==1.7.4 ; python_version >= "3.10" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2-binary==2.9.9 ; python_version >= "3.10" and python_version < "4.0"
 pyasn1==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.14.6 ; python_version >= "3.10" and python_version < "4.0"
@@ -37,7 +37,6 @@ python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-jose==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.7 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -46,6 +45,5 @@ starlette==0.32.0.post1 ; python_version >= "3.10" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.25.0 ; python_version >= "3.10" and python_version < "4.0"
 xlsxwriter==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
