--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     container_name: nes-backend
@@ -8,7 +6,11 @@ services:
       - ./backend:/app
     working_dir: /app
     environment:
-      DATABASE_URL: sqlite:///./db.sqlite
+      DATABASE_USER: ${POSTGRES_USER}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_NAME: ${POSTGRES_DB}
+      DATABASE_HOST: nes-postgres
+      DATABASE_PORT: ${POSTGRES_PORT}
     ports:
       - "8000:8000"
     networks:
@@ -54,6 +56,23 @@ services:
       - backend
     networks:
       - nes-network
+
+  db:
+    image: postgres:latest
+    container_name: nes-postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - nes-network
+
+volumes:
+  postgres_data:
 
 networks:
   nes-network:
